@@ -1,4 +1,6 @@
 [On going]
+1. New DOM operation methods(first_child, last_child, next_sibling, previous_sibling).
+#. Fix some typo of testcase.
 
 [PHP Simple HTML DOM Parser v0.95 is released]
 1. New attribute filters (Thanks to Yousuke Kumakura).
